FIX #1003 - sanitize graphql usage